--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,8 @@
     "airbnb",
     "airbnb/hooks",
     "airbnb-typescript",
-    "prettier"
+    "prettier",
+    "plugin:prettier/recommended" 
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -56,22 +57,18 @@
         "devDependencies": ["**/*.test.tsx", "**/*.test.ts"]
       }
     ],
-    "no-use-before-define": "off",
-    "@typescript-eslint/no-use-before-define": "error",
-    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "no-use-before-define": "warn",
     "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
     "@typescript-eslint/no-explicit-any": "warn",
-    "@typescript-eslint/consistent-type-definitions": ["error", "interface"],
-    "no-shadow": "off",
     "@typescript-eslint/no-shadow": "error",
-    "@typescript-eslint/no-var-requires": "off",
     "react/prop-types": "off",
     "no-undef": "warn",
     "no-unused-vars": "warn",
     "no-redeclare": "warn",
     "react/jsx-props-no-spreading": "off",
     "react/require-default-props": "off",
-    "react/jsx-key": "warn"
+    "react/jsx-key": "warn",
+    "import/no-absolute-path": "off"
   },
   "settings": {
     "react": {
@@ -82,6 +79,9 @@
         "alwaysTryTypes": true,
         "project": "./tsconfig.json"
       }
+    },
+    "alias": {
+      "src": "./src"
     }
   }
 }
