add conventional commits and pre-staged hook

--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^19.6.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "commitlint": "^19.6.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^18.0.0",
@@ -38,11 +40,18 @@
     "eslint-plugin-react": "^7.35.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.11",
-    "husky": "^9.1.5",
+    "husky": "^9.1.7",
     "prettier": "^3.3.3",
     "typescript": "^5.5.4",
     "vite": "^5.4.1",
     "vite-plugin-svgr": "^4.2.0",
     "vite-tsconfig-paths": "^5.0.1"
-  }
+  },
+  "lint-staged": {
+  "*.ts": ["eslint --fix", "prettier --write"],
+  "*.tsx": ["eslint --fix", "prettier --write"],
+  "*.js": ["eslint --fix", "prettier --write"],
+  "*.jsx": ["eslint --fix", "prettier --write"],
+  "*.css": ["stylelint --fix"]
+}
 }
