--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^19.6.0",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -45,6 +47,7 @@
     "eslint-plugin-react-refresh": "^0.4.11",
     "husky": "^9.1.7",
     "prettier": "^3.3.3",
+    "semantic-release": "^24.2.0",
     "typescript": "^5.5.4",
     "vite": "^5.4.1",
     "vite-plugin-svgr": "^4.2.0",
@@ -71,8 +74,8 @@
     ]
   },
   "config": {
-  "commitizen": {
-    "path": "./node_modules/cz-conventional-changelog"
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
-}
 }
