--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
     "release": "npx semantic-release && git push --follow-tags"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.4.0",
     "antd": "^5.22.3",
+    "async-mutex": "^0.5.0",
     "less": "^4.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.2",
+    "redux-persist": "^6.0.0",
     "vite-plugin-pwa": "^0.21.1"
   },
   "devDependencies": {
@@ -33,6 +37,7 @@
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/redux-persist": "^4.3.1",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -66,20 +71,9 @@
     "vite-tsconfig-paths": "^5.0.1"
   },
   "lint-staged": {
-    "*.ts": [
-      "eslint"
-    ],
-    "*.tsx": [
-      "eslint"
-    ],
-    "*.js": [
-      "eslint"
-    ],
-    "*.jsx": [
-      "eslint"
-    ],
-    "*.css": [
-      "prettier --check"
+    "src/**/*.{js,jsx,ts,tsx}": [
+      "eslint",
+      "prettier --write"
     ]
   },
   "config": {
